# slime_molds

./: .gitattributes  CMakeLists.txt  README.md  blur.comp  blur.frag  config.h  draw.frag  main.c  main.cpp  quad.vert  update.comp  util.c  util.h
images/: README.md
